mediaquery.css
@media (min-width: 822px) and (max-width: 1099px) {
  html {
    font-size: 55% !important;
  }

  .column {
    flex: 50%;
    max-width: 33.3%;
    transition: all 0.4s ease-in-out;
  }

  .bio_section {
    width: 100%;
    overflow: auto;
    top: 0;
    left: 0;
  }

  /* .bio_section > div {
    padding-bottom: 3.5rem !important;
    border-bottom: 1px solid;
    overflow: hidden;
  }

  .bio_section > div:not(:first-child) {
    padding-top: 0.5rem;
    overflow: hidden;
  }

  .bio_section > div:last-child {
    border-bottom: none;
    margin-bottom: 0;
    padding-bottom: 0;
  } */

  /* .bio__1 {
    font-size: 2rem;
  } */

  .bio_text {
    line-height: 0.5 !important;
  }

  .bio-info {
    display: none !important;
  }
}
/* from 600px to 821px */
@media (min-width: 600px) and (max-width: 821px) {
  nav {
    top: 3.3rem !important;
    width: 100%;
    z-index: 999;
    transition: all 0.4s ease-in-out;
  }

  .section {
    margin-top: 2.3rem !important;
    transition: all 0.4s ease-in-out;
  }

  .name_section {
    display: block !important;
    position: fixed !important;
    top: 0;
    width: 98%;
    z-index: 1999;
    padding: 0.5rem 0 !important;
    border-bottom: 1px solid;
    font-size: 2rem !important;
    transition: all 0.4s ease-in-out;
    background-color: #fff;
  }

  .bio_section {
    display: none !important;
  }

  .bio_info {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    overflow: hidden;
    left: 0;
    height: calc(100vh - 7rem);
    max-height: calc(100vh -7rem);
    margin-top: 5rem !important;
  }

  .bio_info > div:not(:first-child):not(:last-child){
    border-top: 1px solid;
    padding-top: 0.5rem;
  }

  /* .bio_info > div {
    margin-bottom: 0.5rem;
    padding-bottom: 3.5rem !important;
    overflow: hidden;
    border-bottom: 1px solid;
  }

  .bio_info > div:last-child {
    border-bottom: none;
    margin-bottom: 0;
  }

  .bio_info > div:nth-last-child(-n + 2) {
    padding-bottom: 0;
    border-bottom: none;
  } */

  .bio__1 {
    font-size: 2rem;
    font-weight: 400;
  }
  .bio_sec--4 {
    display: none !important;
  }

  .container {
    grid-template-columns: 1fr !important;
  }
  .navbar {
    width: 98% !important;
  }
  .color-btn {
    display: none;
  }
  .bio_info_link,
  .color-btn__icon {
    display: block !important;
  }
  /* .column {
    flex: 100%;
    max-width: 100%;
  } */

  #workSection {
    scroll-behavior: smooth !important;
    margin: 4rem 0 0 0 !important;
    transition: all 0.4s ease-in-out;
  }

  .scroll-container {
    padding: 10px;
    height: 22rem;
  }

  .scroll-container .scroll-item {
    height: 100%;
    width: auto;
  }

  .scroll-container .scroll-item img,
  .scroll-container .scroll-item video {
    object-fit: contain;
    max-width: 100%;
    max-height: 100%;
  }
  .scroll-button{
    width: 25px;
    font-size: 18px;
  }
  .sub-title {
    padding: 0 !important;
  }

  .lightbox .close-button {
    top: calc(100vh - 68rem) !important;
  }
}

/* from 600px to 665px */
@media (min-width: 600px) and (max-width: 665px) {
  .project-year {
    flex: 0.5;
    text-align: right !important;
    min-width: 100px;
  }
  .sub-title {
    padding: 2rem 0 0 0 !important;
  }
}

/* 599px and below (Mobiles)*/
@media (max-width: 599px) {
  nav {
    top: 3.2rem !important;
    width: 100%;
    z-index: 999;
    padding: 0.5rem 0 !important;
    font-size: 2rem !important;
    transition: all 0.4s ease-in-out;
  }

  .name_section {
    display: block !important;
    position: fixed !important;
    top: 0;
    width: 97%;
    z-index: 1999;
    padding: 0.5rem 0 !important;
    border-bottom: 1px solid;
    font-size: 2rem !important;
    transition: all 0.4s ease-in-out;
    background-color: #fff;
  }

  .bio_section {
    display: none !important;
  }

  .section {
    margin-top: 2.3rem !important;
    transition: all 0.4s ease-in-out;
  }

  .bio_info {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    overflow: hidden;
    top: 0;
    left: 0;
    height: calc(100vh - 7rem);
    max-height: calc(100vh - 7rem);
    margin-top: 5rem !important;
  }

  .bio_info > div:not(:first-child):not(:last-child){
    border-top: 1px solid;
    padding-top: 0.5rem;
  }
  /* .bio_info > div:not(:last-child) {
    margin-bottom: 0.5rem;
    padding-bottom: 5.3rem !important;
    overflow: hidden;
    border-bottom: 1px solid;
  }

  .bio_info > div:last-child {
    border-bottom: none;
    margin-bottom: 0;
    padding-bottom: 0;
  }

  .bio_info > div:nth-last-child(-n + 2) {
    border-bottom: none;
  } */

  .bio__1 {
    font-size: 2rem;
    font-weight: 400;
  }
  .bio_sec--4 {
    display: none !important;
  }

  .container {
    grid-template-columns: 1fr !important;
  }
  .navbar {
    width: 97% !important;
  }
  .color-btn {
    display: none;
  }
  .bio_info_link,
  .color-btn__icon {
    display: block !important;
  }
  .column {
    flex: 100%;
    max-width: 100%;
    transition: all 0.4s ease-in-out;
  }

  #workSection {
    scroll-behavior: smooth !important;
    margin: 4rem 0 0 0 !important;
    transition: all 0.4s ease-in-out;
  }
  .scroll-container {
    padding: 10px 0;
    height: 25rem;
  }

  .scroll-container .scroll-item {
    height: 100%;
    width: auto;
  }
  .scroll-container .scroll-item img,
  .scroll-container .scroll-item video {
    max-width: 100%;
    max-height: 100%;
    border-radius: 1px;
    height: 100%;
    object-fit: cover;
  }

  .scroll-button{
    width: 25px;
    font-size: 18px;
  }

  .sub-title {
    padding: 2rem 0 0 0 !important;
  }
  .project-year {
    text-align: right !important;
  }

  .lightbox .close-button {
    top: calc(100vh - 68rem) !important;
  }
}

@media (max-width: 399px) {
  .bio_info {
    overflow: auto !important;
  }

  .bio_info > div {
    margin-bottom: 0.5rem;
    padding-bottom: 1.8rem;
  }
}
@media (max-width: 365px) {
  html {
    font-size: 55% !important;
  }

  .title-info{
    min-width:initial;
  }
  /* .project-year {
    flex: 0.5;
    text-align: left !important;
    min-width: 100px;
    padding: 1rem 0;
  } */
}

